<resources>
    <string name="app_name">Ternavest</string>

    <string name="hint_select_province">Pilih provinsi</string>
    <string name="hint_select_regency">Pilih kabupaten</string>
    <string name="hint_select_district">Pilih kecamatan</string>

    <string name="kelola">Kelola</string>
    <string name="peminat">Peminat</string>
    <string name="profil">Profil</string>
    <string name="profile">Profil</string>
    <string name="home">Beranda</string>
    <string name="portfolio">Portofolio</string>
    <string name="project">Porfolio</string>
    <string name="loading">Memuat…</string>


    <string name="btn_persistent">Persistent Bottom Sheet</string>
    <string name="btn_modal">Modal Bottom Sheet</string>
    <string name="tv_title">Learn Bottom Sheet</string>
    <string name="tv_description">
        A BottomSheet is a component that is used to display some information by sliding
        the view up in the screen and also you can hide this BottomSheet when the message
        is conveyed to the users. This is a nice way of conveying some message or performing
         A BottomSheet is a component that is used to display some information by sliding
        the view up in the screen and also you can hide this BottomSheet when the message
        is conveyed to the users. This is a nice way of conveying some message or performing
         A BottomSheet is a component that is used to display some information by sliding
        the view up in the screen and also you can hide this BottomSheet when the message
        is conveyed to the users. This is a nice way of conveying some message or performing
         A BottomSheet is a component that is used to display some information by sliding
        the view up in the screen and also you can hide this BottomSheet when the message
        is conveyed to the users. This is a nice way of conveying some message or performing
         A BottomSheet is a component that is used to display some information by sliding
        the view up in the screen and also you can hide this BottomSheet when the message
        is conveyed to the users. This is a nice way of conveying some message or performing
        some task in Android. Types of BottomSheet \n\nA BottomSheet is of two types: \n\nPersistent BottomSheet \n\nModal BottomSheet</string>
    <string name="btn_one">Button 1</string>
    <string name="btn_two">Button 2</string>
    <string name="btn_three">Button 3</string>
    <string name="loading_rupiah">Rp0</string>
    <string name="notification_channel_id">default</string>
    <string name="biaya_per_ekor_ternak">Biaya per ekor ternak</string>
    <string name="rp_50_000_adalah_biaya_satu_ekor_hewan_selama_satu_periode_proyek_silakan_masukkan_berapa_jumlah_hewan_yang_ingin_anda_investasikan">Rp 50.000 adalah biaya satu ekor hewan selama satu periode proyek. Silakan masukkan berapa jumlah hewan yang ingin Anda investasikan.</string>
    <string name="jumlah_ekor_ternak">Jumlah ekor ternak</string>
    <string name="lanjut_pembayaran">Lanjut Pembayaran</string>
    <string name="peternak">Peternak</string>
    <string name="status">Status</string>
    <string name="riwayat_pembayaran">Riwayat pembayaran</string>
    <string name="edit_informasi">Edit Informasi</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata sandi</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="atau">Atau</string>
    <string name="masuk_dengan_google">Masuk/Daftar dengan Google</string>
    <string name="daftar">Daftar</string>
    <string name="rekening_tujuan">Rekening tujuan</string>
    <string name="bukti_pembayaran">Bukti pembayaran</string>
    <string name="unggah_foto">Unggah foto</string>
    <string name="kirim_bukti">Kirim Bukti</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi kata sandi</string>
    <string name="masukan_alamat_email_akun_anda_kemudian_cek_email">Masukan alamat email akun Anda, kemudian cek email.</string>
    <string name="kirim">Kirim</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="akun">Akun</string>
    <string name="nama_lengkap_sesuai_ktp">Nama lengkap sesuai KTP</string>
    <string name="simpan">Simpan</string>
    <string name="nama_akun_rekening">Nama akun rekening</string>
    <string name="nomor_rekening">Nomor rekening</string>
    <string name="nama_bank">Nama bank</string>
    <string name="rekening">Rekening</string>
    <string name="pilih_ktp">Pilih KTP</string>
    <string name="ktp">KTP</string>
    <string name="awali_nomor_telepon_dan_whatsapp_dengan_62">Awali nomor telepon dan WhatsApp dengan 62</string>
    <string name="nomor_whatsapp">Nomor WhatsApp</string>
    <string name="nomor_telepon">Nomor telepon</string>
    <string name="alamat">Alamat</string>
    <string name="ternavest">ternavest</string>
    <string name="arief_zuhri">Arief Zuhri</string>
    <string name="api_wilayah_by_fariz_ramadhan_farizdotid">API Wilayah by Fariz Ramadhan (farizdotid)</string>
    <string name="rinogen10">rinogen10</string>
    <string name="universitas_gadjah_mada">Universitas Gadjah Mada</string>
    <string name="hubertus_rino_augenio">Hubertus Rino Augenio</string>
    <string name="nanangarif08">nanangarif08</string>
    <string name="nanang_arifudin">Nanang Arifudin</string>
    <string name="tim_kami">Tim Kami</string>
    <string name="ariefzuhri">ariefzuhri</string>
    <string name="silakan_pilih_salah_satu">Silakan pilih salah satu</string>
    <string name="saya_adalah_peternak">Saya adalah Peternak</string>
    <string name="saya_ingin_investasi">Saya Ingin Investasi</string>
    <string name="judul_laporan">Judul laporan</string>
    <string name="deskripsi_laporan">Deskripsi laporan</string>
    <string name="tanggal">Tanggal</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="mohon_tunggu">Mohon tunggu...</string>
    <string name="ayam_pullet_bulan">Ayam Pullet Bulan</string>
    <string name="belum_ada_peminat">Belum ada peminat</string>
    <string name="peminat_proyek">Peminat proyek</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_commodo_cursus_pellentesque_leo_massa_lacus_est_quisque_varius_ipsum_consequat_in_netus_quis">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Commodo cursus pellentesque leo massa lacus, est. Quisque varius ipsum consequat in netus quis</string>
    <string name="deskripsi_proyek">Deskripsi proyek</string>
    <string name="_15_01_2021">15-01-2021</string>
    <string name="kukap_poncosari_srandakan">Kukap poncosari srandakan</string>
    <string name="jenis_hewan">Jenis Hewan</string>
    <string name="ayam_petelur">Ayam Petelur</string>
    <string name="roi">ROI</string>
    <string name="_16">16%</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="provinsi">Provinsi</string>
    <string name="biaya_per_hewan_selama_periode">Biaya per hewan selama periode</string>
    <string name="tanggal_selesai_proyek">Tanggal selesai proyek</string>
    <string name="tanggal_mulai_proyek">Tanggal mulai proyek</string>
    <string name="nama_proyek">Nama proyek</string>
    <string name="persentase_roi">Persentase ROI</string>
    <string name="total_biaya_yang_dibayar">Total biaya yang dibayar</string>
    <string name="_20">20%</string>
    <string name="lihat_profil">Lihat profil</string>
    <string name="_06_01_2021">06-01-2021</string>
    <string name="pemberian_vaksin">Pemberian Vaksin</string>
    <string name="setel_ulang">Setel ulang</string>
    <string name="filter">Filter</string>
    <string name="mohon_verifikasi_email_anda">Mohon verifikasi email Anda</string>
    <string name="pengaturan_profil">Pengaturan profil</string>
    <string name="ganti_kata_sandi">Ganti kata sandi</string>
    <string name="tentang_aplikasi">Tentang aplikasi</string>
    <string name="keluar_akun">Keluar akun</string>
    <string name="belum_ada">Belum ada</string>
    <string name="kamu_belum_mempunyai_proyek">Kamu belum mempunyai proyek</string>
    <string name="tambahkan_proyek">Tambahkan Proyek</string>
    <string name="untung">Untung</string>
    <string name="semua_senang_dan_gembira">Semua senang dan gembira</string>
    <string name="bangun">Bangun</string>
    <string name="proyek_ternak_tanpa_takut_modal">Proyek ternak tanpa takut modal</string>
    <string name="invest">Invest</string>
    <string name="mari_mulai_berinvestasi">Mari mulai berinvestasi</string>
    <string name="ketuk_untuk_memperbesar_gambar">Ketuk untuk memperbesar gambar</string>
    <string name="terima_pembayaran">Terima Pembayaran</string>
    <string name="tolak">Tolak</string>
    <string name="rp0">Rp0</string>
    <string name="investasi_sekarang">Investasi Sekarang</string>
    <string name="tidak_ada_akun">Belum punya akun?</string>
    <string name="proyek_alamat">Alamat lengkap proyek</string>

    <string-array name="ref_rejection_note_payment">
        <item>Bukti tidak sah</item>
        <item>Total pembayaran kurang</item>
        <item>Informasi tidak dapat dibaca</item>
    </string-array>
</resources>