<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/activity_tambah_laporan">

    <EditText
        android:id="@+id/txtJudulLaporan"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/judul_laporan"
        android:layout_below="@+id/toolbartambahLaporan"
        android:paddingHorizontal="8dp"
        android:inputType="textCapWords"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txtDeskripsiLaporan"
        style="@style/EditText.MultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/deskripsi_laporan"
        android:layout_below="@+id/txtJudulLaporan"
        android:paddingHorizontal="8dp"
        android:inputType="textCapSentences"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txtTanggalLaporan"
        style="@style/EditText"
        android:layout_below="@+id/txtDeskripsiLaporan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/tanggal"
        android:paddingHorizontal="8dp"
        android:inputType="none"
        android:editable="false"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="Autofill,Deprecated" />

    <EditText
        android:id="@+id/txtJenisHewanDetail"
        style="@style/EditText"
        android:layout_below="@+id/txtTanggalLaporan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/pemasukan"
        android:paddingHorizontal="8dp"
        android:inputType="number"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txtRoiDetail"
        style="@style/EditText"
        android:layout_below="@+id/txtJenisHewanDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/pengeluaran"
        android:paddingHorizontal="8dp"
        android:inputType="number"
        tools:ignore="Autofill" />

    <ImageView
        android:id="@+id/imgUploadLaporan"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/txtRoiDetail"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/upload"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnUploadImageLaporan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgUploadLaporan"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/pilih_gambar" />

    <Button
        android:id="@+id/btnSimpanLaporan"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/simpan"
        android:layout_below="@+id/btnUploadImageLaporan"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:layout_marginBottom="32dp" />
</merge>